# msh

./: README.md  msh.cabal
.github/workflows/: main.yml
.stack-work/: stack.sqlite3
.stack-work/ghci/1f759240/: cabal_macros.h
src/: Commands.hs  Main.hs
